[gd_scene load_steps=2 format=2]

[ext_resource path="res://addons/OQ_Toolkit/OQ_ARVROrigin/scripts/Feature_MixedRealityCapture.gd" type="Script" id=1]


[node name="Feature_MixedRealityCapture" type="Spatial"]
script = ExtResource( 1 )

[node name="Background_Viewport" type="Viewport" parent="."]
size = Vector2( 512, 512 )
render_target_update_mode = 1

[node name="Background_Camera" type="Camera" parent="Background_Viewport"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3, 2.3055 )

[node name="Foreground_Viewport" type="Viewport" parent="."]
size = Vector2( 512, 512 )
transparent_bg = true
render_target_update_mode = 1

[node name="Foreground_Camera" type="Camera" parent="Foreground_Viewport"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3, 2.3055 )
